<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityTwo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:id="@+id/phone_txt"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phoneEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@+id/phone_txt"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:id="@+id/message_txt"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_txt" />

    <TextView
        android:id="@+id/messageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:layout_marginTop="42dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/message_txt"
        app:layout_constraintTop_toBottomOf="@id/phoneEditText"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/closeBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="200dp"
        android:layout_marginStart="150dp"
        tools:layout_editor_absoluteX="161dp"
        android:text="@string/close"
        android:textAllCaps="false"
        tools:layout_editor_absoluteY="275dp">

    </Button>

    <Button
        android:id="@+id/writeSH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/writesh"
        android:textAllCaps="false"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="317dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="350dp"
        android:layout_marginStart="20dp"/>

    <Button
        android:id="@+id/readSh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readsh"
        android:textAllCaps="false"
        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="314dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/writeIS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/writeis"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeSH" />

    <Button
        android:id="@+id/readIS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/readsis"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readSh" />

    <Button
        android:id="@+id/writeSQL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/writesql"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeIS" />

    <Button
        android:id="@+id/readSQL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/readsql"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readIS" />

</androidx.constraintlayout.widget.ConstraintLayout>